--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-easy-toast": "^1.2.0",
+    "react-native-event-bus": "^1.0.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-htmlview": "^0.13.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
